<resources>
    <string name="app_name">AnnuaireLauriats</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Annuaire Laureats</string>
    <string name="nav_header_subtitle">username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Parametres</string>

    <string name="menu_home">Profile</string>
    <string name="menu_gallery">Filter</string>
    <string name="menu_slideshow">Trouver sur la carte</string>
    <string name="menu_tools">Tools</string>

    <string name="app_options">Options</string>
    <string name="menu_propos">A propos de nous</string>
    <string name="menu_standards">Standards de Communité</string>
    <string name="menu_help">Aide</string>
    <string name="menu_Signaler">Signaler un Problème</string>

    <string name="communicate">Partage</string>
    <string name="menu_share">Partager L\'application</string>
    <string name="menu_send">Logout</string>


    <string name="title_activity_login">Annuaire</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Email n\'est pas valide</string>
    <string name="invalid_password">Mot de passe doit contenir 6 carateres minimum</string>
    <string name="invalid_Nom">champs doit etre non null</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_register">Annuaire</string>
    <string name="share_button"> </string>
    <string name="shareourapp">Partager App</string>
    <string name="content_profile">image_pdp</string>
    <string name="connectez_vous">vous avez deja un compte? connectez vous</string>
    <string name="inscrivez_vous">ou bien inscrivez vous</string>
    <string name="send">send</string>
    <string name="response">response</string>
    <string name="response_de_server">response de server</string>
    <string name="prenom">description image</string>
    <string name="nom_monu">nom et prenom laureat</string>
    <string name="description_monument">description</string>
    <string name="avis">avis</string>
    <string name="nom_monu_org">organisation</string>
    <string name="prmpt_nom_laureat">Votre Nom</string>
    <string name="prmpt_tel_laureat">06…</string>
    <string name="selectionner_image">SELECTIONNER IMAGE</string>
    <string name="selectionner_image_result">aucune image selectionnée</string>
    <string name="organisation">Organisation</string>
    <string name="organisation_non_existe">L\'organisation n\'est pas reconnue ?</string>
    <string name="close">fermer</string>
    <string name="text">description</string>
    <string name="personnaliser_votre_filtre">personnaliser votre filtre</string>
    <string name="save_filter">chercher</string>
    <string name="nom_de_l_organisatiom">Nom de L\'Organisatiom</string>
    <string name="enregistrez_vous_ic">Enregistrez Vous</string>
    <string name="intitule_sur_votre_fonction">intitule sur votre fonction</string>
    <string name="petit_description_sur_vous">petit description sur vous</string>
    <string name="date_hint">AAAA-MM-JJ</string>
    <string name="filierefiliere">Filiere</string>
    <string name="invalid_date">date non valide</string>
    <string name="provinceprovince">Province</string>
    <string name="promotionpromotion">Promotion</string>
    <string name="accepter_ou_les_organisations_suivantes">Accepter ou les Organisations suivantes</string>
    <string name="prmpt_prenom_laureat">Votre Prenom</string>
    <string name="invalid_Tel">numero de telephone non valid</string>
    <string name="mainmainmainmain">main</string>
    <string name="sellect_gender">sexe</string>
    <string name="select_filiere">Filiere</string>
    <string name="select_promotion">promotion</string>
    <string name="select_Organisation">Organisme</string>
    <string name="select_secteur">secteur</string>
    <string name="invalid_gender">selectionner votre genre</string>
    <string name="invalid_filier">selectionner filiere</string>
    <string name="invalid_promotion">SELECTIONNER promotion</string>
    <string name="invalid_image">selectionner une image</string>
    <string name="selectionner_votre_photo">Selectionner votre photo</string>
    <string name="secteur_secteur_word">Secteur</string>
    <string name="invalid_check_radio">choisir une option</string>
    <string name="selectionner_organisation">selectionner organisation</string>
    <string name="invalid_org">selectionner organisation</string>
    <string name="invalid_secteur">choisir secteur</string>
    <string name="invalid_doesnotexist">email n\'existe pas</string>
    <string name="wrong_password">mot de passe erone</string>
    <string name="email_taken">email deja pris !</string>
    <string name="appliquer_nouveau_filtre">Appliquer nouveau filtre</string>
    <string name="afficher_dans_liste">Afficher sur la liste</string>
    <string name="afficher_dans_carte">Afficher le resultat dans la carte</string>
    <string name="invalid_position">selectionner une position</string>
    <string name="modifier_votre_profile">Modifier votre profile</string>
    <string name="statut_de_profil">Statut de profil :</string>
    <string name="serveur_injoignable">serveur injoignable!</string>
    <string name="verifier_votre_connexion_internet_et_reessayer">verifier votre connexion internet et reessayer</string>
    <string name="ok_ok">OK</string>
    <string name="parcours_professionnelle">Parcours Professionnelle</string>
    <string name="descriptipn_de_profil">Description de laureat :</string>
</resources>
