<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serveur_injoignable"
        android:textSize="24sp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#f33"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verifier_votre_connexion_internet_et_reessayer"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textColor="#33f"/>
    <Button
        android:id="@+id/exit_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok_ok"/>

</LinearLayout>