<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/image_laureat"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/prenom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:maxWidth="200dp"
        />

    <TextView
        android:id="@+id/nom_monu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/nom_monu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_laureat"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/org_laureat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/nom_monu_org"
        app:layout_constraintTop_toBottomOf="@id/nom_monu"
        app:layout_constraintStart_toEndOf="@id/image_laureat"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/description_laureat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textSize="12sp"
        android:layout_marginBottom="5dp"
        android:text="@string/description_monument"
        android:bufferType="spannable"
        android:autoSizeTextType="uniform"
        app:layout_constraintTop_toBottomOf="@id/org_laureat"
        app:layout_constraintStart_toEndOf="@id/image_laureat"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/black" />


</androidx.constraintlayout.widget.ConstraintLayout>

