<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@id/editText1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="150dp"
        android:text="@string/send" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonSend"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/response"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/result_http_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:hint="@string/response_de_server"
        android:inputType="textMultiLine"
        android:lines="16"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:padding="20dp"
        tools:layout_editor_absoluteX="0dp">

        <requestFocus />
    </EditText>

</androidx.constraintlayout.widget.ConstraintLayout>